docs(api): add CooperativeController api documentation
